# pyxstar

./: .gitignore  README.md  pyproject.toml
pixstar/: api.py  main.py
pyxstar/: api.py  main.py
tests/: test_api.py  test_integration.py  test_list.py  test_parsing.py  test_pixstar.py
tests/data/: .gitignore  album_web.html  album_web_end.html  albums_list.html
