[tool.poetry]
name = "pixstar"
version = "0.1.0"
description = ""
authors = ["Peter Griess <pg@std.in>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pixstar = "pixstar.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
