[tool.poetry]
name = "pyxstar"
version = "0.1.0"
description = ""
authors = ["Peter Griess <pg@std.in>"]

[tool.poetry.dependencies]
python = "^3.10"
osxphotos = "^0.45.12"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
pyxstar = "pyxstar.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
